--- a/json/languages/pt_br/commands/clear.json
+++ b/json/languages/pt_br/commands/clear.json
@@ -1,43 +1,15 @@
 
 [
     {
-        "content": "conteudo da mensagem",
-        "reference": "message",
-        "allowed_mentions": {
-            "replied_user": false
-        },
-        "embed": {
-            "footer": {
-                "text": "{ctx.author}",
-                "icon_url": "{ctx.author.avatar_url}"
-            },
-            "image": {
-                "url": "{ctx.author.avatar_url}"
-            },
-            "thumbnail": {
-                "url": "{ctx.author.avatar_url}"
-            },
-            "fields": [
-                {
-                    "inline": true,
-                    "name": "1° Field",
-                    "value": "Valor do x: `{x}`"
-                },
-                {
-                    "inline": true,
-                    "name": "2° Filed",
-                    "value": "valor do y: `{y}`"
-                }
-            ],
-            "author": {
-                "name": "{ctx.me.name}",
-                "icon_url": "{ctx.me.avatar_url}"
-            },
-            "color": "random",
-            "timestamp": "now",
-            "type": "rich",
-            "description": "Embed feito pelo {ctx.me}",
-            "title": "Embed feito para o {ctx.author}"
-        }
-    }    
+        "content": "{ctx.author.mention} deletou {deleted} mensagens!",
+        "delete_after": 5
+    },
+    {
+        "content": "{ctx.author.mention} não foram deletadas {keep} mensagens, pois estavam fixadas.",
+        "delete_after": 5
+    },
+    {
+        "content": "{ctx.author.mention} não foi deletada uma mensagem, pois estava fixada.",
+        "delete_after": 5
+    }
 ]
