--- a/json/languages/pt_br/help/joinrank.json
+++ b/json/languages/pt_br/help/joinrank.json
@@ -1,7 +1,7 @@
 {
     "description": "Eu vou mostrar o rank com os membros mais antigos do servidor.",
     "examples": [
-        "`{prefix}jr` `{ctx.bot.display_name}`",
+        "`{prefix}jr` `{ctx.bot.user.display_name}`",
         "`{prefix}jr`"
     ],
     "how_to_use": "`{prefix}joinrank` `[membro (padrão: quem usou o comando)]`"
