comando de uptime criado

--- a/bot/language/json/pt_BR.json
+++ b/bot/language/json/pt_BR.json
@@ -2,5 +2,6 @@
     "Calculating latency...": "Calculando o ping...",
     "API latency:": "Latência da API:",
     "Database response time:": "Tempo de resposta do banco de dados:",
-    "Discord response time:": "Tempo de resposta no discord:"
+    "Discord response time:": "Tempo de resposta no discord:",
+    "When I started:": "Quando eu iniciei:"
 }
