--- a/bot/language/json/pt_BR.json
+++ b/bot/language/json/pt_BR.json
@@ -3,5 +3,6 @@
     "API latency:": "Latência da API:",
     "Database response time:": "Tempo de resposta do banco de dados:",
     "Discord response time:": "Tempo de resposta no discord:",
-    "When I started:": "Quando eu iniciei:"
+    "When I started:": "Quando eu iniciei:",
+    "Reloaded all cogs": "Cogs recarregados"
 }
