comando "avatar" criado

--- a/bot/language/json/pt_BR.json
+++ b/bot/language/json/pt_BR.json
@@ -4,5 +4,8 @@
     "Database response time:": "Tempo de resposta do banco de dados:",
     "Discord response time:": "Tempo de resposta no discord:",
     "When I started:": "Quando eu iniciei:",
-    "Reloaded all cogs": "Cogs recarregados"
+    "Reloaded all cogs": "Cogs recarregados",
+    "Click": "Clique",
+    "here": "aqui",
+    "to see the avatar": "para ver o avatar"
 }
